--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,8 +45,8 @@
      	<td><%=i.name %></td>
      	<td><%=i.address %></td>
      	<td><%=i.phoneno %></td>
-     	<td width="200px"><a href="/editdata/"+<%=i._id%>><button id="colt">Edit</button></a></td>
-     	<td width="200px"><a href="/deletedata/"+<%=i._id%>><button id="colt">Delete</button></a></td>
+     	<td width="200px"><a href="/editdata/<%=i._id%>"><button id="colt">Edit</button></a></td>
+     	<td width="200px"><a href="/deletedata/+<%=i._id%>"><button id="colt">Delete</button></a></td>
      </tr>
      <%})%>
  </table>
